# torchani

./: .buildinfo  .coverage  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION  CODEOWNERS  Dockerfile  Dockerfile.conda  LICENSE  Logger.py  MANIFEST.in  README.md  Testing.py  TrainTANY.py  TrainingAnalysis.py  aev_compare_neurochem.py  aev_match.py  ani.py  api.html  azure.yml  blackwell.yaml  codefresh.yml  conda.Dockerfile  conf.py  cuaev.md  dev_environment.yaml  dev_requirements.txt  docs_requirements.txt  download.sh  environemnt.yaml  environment-dev.yaml  environment.yaml  generate-api.html  genindex.html  (+22 more)
.doctrees/: api.doctree  environment.pickle  index.doctree  start.doctree
.github/: CODEOWNERS  wip.yml
_modules/: index.html
_sources/: api.rst.txt  index.rst.txt  start.rst.txt
_static/: documentation_options.js
api_autogen/: torchani.aev.html  torchani.annotations.html  torchani.arch.html  torchani.ase.html  torchani.cli.html  torchani.constants.html  torchani.cutoffs.html  torchani.datasets.filters.html  torchani.datasets.html  torchani.electro.html  torchani.grad.html  torchani.html  torchani.io.html  torchani.legacy_data.html  torchani.models.html  torchani.neighbors.html  torchani.neurochem.html  torchani.nn.html  torchani.paths.html  torchani.potentials.html  torchani.sae.html  torchani.sae_estimation.html  torchani.transforms.html  torchani.units.html  torchani.utils.html
azure/: deploy-docs.yml  deploy-pypi.yml  docs.yml  flake8.yml  install_dependencies.sh  install_dependencies_python2.sh  python2.yml  runnable_submodules.yml  tests.yml  tools.yml
benchmark/: ani_benchmark.py  benchmark.py  generate_data.py  neighboraev.py  run.ipynb  run.py  selected_system.py  to_xyz.py
ci/: extension-include-dirs.py  install_cuda.sh  install_dependencies.sh  install_stable_dependencies.sh
conda/: build_conda.sh  pkg_helpers.bash
dataset/: MakeJointDataset.py  ani-1x  ani1-up_to_gdb4  ani_gdb_s01.h5
docs/: api.rst  conf.py  index.rst  installing.rst  start.rst  tips.rst
examples/: .gitignore  ANI-1.ipynb  ANI-1x-training-Adam.py  ANI-1x-training.py  analyze-gradients.py  ase_interface.html  ase_interface.py  ase_langevin.py  batch-gradient-variance.py  cache_aev.html  cache_aev.py  common.py  configs.py  dataset-prepare.py  dataset_example_advanced.py  dataset_example_simple.py  datasets_advanced_usage.py  datasets_simple_usage.py  dispersion_example.py  dispersion_potential.py  energy_and_force_calculation.py  energy_force.html  energy_force.py  energy_force_dipole.py  extending_aev.py  fundamentals.py  h5_dataset_example.py  index.html  inference-benchmark.py  jit.html  jit.py  just_in_time_compilation.py  learning-curve-vs-batch-size.ipynb  legacy_neurochem_loading.py  legacy_neurochem_trainer.py  legacy_training.py  legacy_training_force.py  load_from_neurochem.html  load_from_neurochem.py  model.py  (+23 more)
examples_autogen/: ase_interface.html  datasets_advanced_usage.html  datasets_simple_usage.html  dispersion_potential.html  extending_aev.html  fundamentals.html  index.html  just_in_time_compilation.html  neurochem_loading.html  repulsive_potential.html  sg_execution_times.html  training.html  vibration_analysis.html
legacy-examples/: energy_force.py  model.py  nnp_training.py  training-benchmark.py
recipe/: conda_build_config.yaml  meta.yaml  run_test.py
tests/: common_aev_test.py  test_active_learning.py  test_aev.py  test_aev2.py  test_aev3.py  test_aev_benzene_md.py  test_aev_hook.py  test_aev_nist.py  test_aev_tripeptide_md.py  test_al.py  test_ase.py  test_batch.py  test_benchmark.py  test_builtin_models.py  test_calc.py  test_cuaev.py  test_cuaev_not_installed.py  test_data.py  test_data_new.py  test_datasets.py  test_datasets_batching.py  test_datasets_builtin.py  test_deprecated_data_module.py  test_dispersion.py  test_electro.py  test_embed.py  test_energies.py  test_energyshifter.py  test_ensemble.py  test_force.py  test_forces.py  test_gaev.py  test_geometry.py  test_grad.py  test_grad_module.py  test_gradcheck.py  test_ignite.py  test_infer.py  test_infer_mnp.py  test_inference.py  (+21 more)
tools/: README.md  aev-benchmark-size-force-2times-backward.py  aev-benchmark-size.py  benchmarks.txt  builtin-datasets-codegen.py  comp6.py  comp6v1-accuracy-benchmark.py  comp6v1-benchmark.py  dump_dispersion_constants.py  dump_repulsion_constants.py  extxyz_parser.py  generate-unit-test-expect.py  generate-xyz-files.py  inference-benchmark.py  md-benchmark-nsys-profile.py  md-benchmark.py  md-nsys-benchmark.py  md-scaling-benchmark.py  mnp-benchmark.py  molecule_utils.py  neighborlist-benchmark.py  (+13 more)
torchani/csrc/: CMakeLists.txt  README.md  __init__.py  aev.cu  aev.h  cell_list.cpp  cuaev.cpp  cuaev_cub.cuh  mnp.cpp
(+5568 files in other folders)
