[project]
name = "torchani"
authors = [
    {name = "Ignacio Pickering", email = "ign.pickering@gmail.com"},
    {name = "Xiang Gao", email = "qasdfgtyuiop@gmail.com"},
    {name = "Jinze Xue", email = "jinzexue@chem.ufl.edu"},
]
description = "PyTorch implementation of the ANI neural network potential family"
readme = "README.md"
keywords = [
    "machine-learning",
    "neural-networks",
    "deep-learning",
    "chemistry",
    "torch",
    "energy",
]
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.8"
dependencies = [
    "torch==2.5",
    "numpy==1.26",
    "typing_extensions>=4.0.0",
    "h5py",
    "tqdm",
    "typer",
    "rich",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/aiqm/torchani"

# NOTE: If installed with build isolation torch can't be accessed and
# the CUDA and C++ extensions can't be compiled
[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project.scripts]
ani = "torchani.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["torchani*"]

[tool.setuptools_scm]
version_file = "torchani/_version.py"
fallback_version="0.0.0"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
exclude = "(build/.*|tests/.*|tools/.*|docs/src/examples_autogen/.*|docs/build/.*)"

[tool.pytest.ini_options]
filterwarnings = "ignore:.*distutils Version classes are deprecated.*:DeprecationWarning"

[project.optional-dependencies]
ase = ["ase"]
data = ["zarr", "pandas", "pyarrow"]
all = ["ase", "zarr", "pandas", "pyarrow"]
